--- a/ansible/roles/network_config/tasks/main.yaml
+++ b/ansible/roles/network_config/tasks/main.yaml
@@ -1,9 +1,29 @@
-# enable ipv4 only
-
-- name: Ensure IP forwarding is enabled
+- name: ensure IP forwarding is enabled
   lineinfile:
     path: /etc/sysctl.conf
     regexp: '^#?net.ipv4.ip_forward'
     line: net.ipv4.ip_forward=1
+  tags: [network_config]
 
-# enable pi-hole
+- name: disable IPv6
+  blockinfile:
+    path: /etc/sysctl.conf
+    block: |
+      net.ipv6.conf.all.disable_ipv6 = 1
+      net.ipv6.conf.default.disable_ipv6 = 1
+      net.ipv6.conf.lo.disable_ipv6 = 1
+  tags: [network_config]
+
+# Looks like not idempotent
+- name: reload kernel parameters
+  command: sysctl -p
+  tags: [network_config]
+
+- name: set static IP address for default interface
+  template:
+    src: "{{ role_path }}/templates/default_interface.j2"
+    dest: "/etc/network/interfaces.d/{{ network_interface_name }}"
+    owner: root
+    group: root
+    mode: '0644'
+  tags: [network_config]
