Add sudo to travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ os:
 dist:
   - bionic
 
+sudo: required
+
 before_script:
   - git clone https://github.com/sstephenson/bats.git
   - cd bats
-  - ./install.sh /usr/local
+  - sudo ./install.sh /usr/local
   - cd ..
 
 script:
